aws/terraform/modules/webgoat/webgoat.tf
# Webgoat instance details

resource "aws_instance" "webgoat" {
  count = "${var.webgoat_instance_ct}"
  subnet_id = "${var.subnet_id}"
  ami = "${var.webgoat_instance_ami}"
  instance_type = "${var.webgoat_instance_type}"
  key_name = "${var.key_name}"
  vpc_security_group_ids = ["${aws_security_group.bit-webgoat.id}"]

  connection {
    user = "ec2-user"
    private_key = "${file("~/.ssh/bitHackLab")}"
  }

  provisioner "remote-exec" {
    inline = [
      "sudo yum -y install docker",
      "sudo service docker start",
      "sudo docker pull webgoat/webgoat-container",
      "sudo docker run -d -p 8080:8080 webgoat/webgoat-container"


    ]
  }

  tags = {
    Name      = "webgoat-${count.index}"
    Terraform = "True"
  }
}
