aws/terraform/modules/webgoat/sg.tf
#WebGoat security group rules
resource "aws_security_group" "bit-webgoat" {
  name = "webgoat-instances"
  description = "Access to webgoat instances"
  vpc_id = "${var.vpc_id}"

  # terminal/ssh rule
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ip_list}"]
  }

  # terminal/ssh rule
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["${var.ip_list}"]
  }

  # outbound rules
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Terraform  = "true"
    Name = "webgoat-instances"
  }
}
